[www.hackercamp.cz] Fixed link to form

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -249,7 +249,7 @@
           večerní&nbsp;zábava
         </li>
       </ul>
-      <p><a href="https://docs.google.com/forms/d/1MS_4Fe29r4wS8AwOS3Y4Rx6uMxl1c4Clw38un056N30/edit" class="hc-cta">Chci se zúčastnit</a></p>
+      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform" class="hc-cta">Chci se zúčastnit</a></p>
     </section>
     <section id="popis">
       <p property="description">
@@ -444,9 +444,9 @@
       <h2>Chceš přijet?</h2>
       <p>
         <a
-          href="https://docs.google.com/forms/d/1MS_4Fe29r4wS8AwOS3Y4Rx6uMxl1c4Clw38un056N30/edit"
+          href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
           >Vyplň nám dotazníček</a
-        >, ideálně rovnou s nápadem, jak bys Hacker Camp obohatil(a). Těšíme se!
+        >, ideálně rovnou s nápadem, jak bys Hacker Camp obohatil(a) a my se ti pak ozveme. Těšíme se!
       </p>
     </section>
 
