[www.hackercamp.cz] Fixed #1103

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -124,7 +124,9 @@
         padding-right: 1ex;
       }
 
-      .hc-cta, .hc-cta:visited {
+      .hc-cta,
+      .hc-cta:link,
+      .hc-cta:visited {
         color: #fff;
         background-image: var(--hc-gradient);
         font-weight: bold;
