[www.hackercamp.cz] Updated gradient to match graphic design

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -27,7 +27,7 @@
         --hc-heading-color: #000;
         --hc-link-color: #2161b1;
         --hc-link-visited-color: #bb006e;
-        --hc-gradient: linear-gradient(to right, #fb5108, #bb006e, #2161b1);
+        --hc-gradient: linear-gradient(90deg, #EE771B -0.01%, #E9444E 25.57%, #E62271 42.71%, #684997 78.9%, #3E7ABC 100.02%);
       }
 
       @media (prefers-color-scheme: dark) {
