[www.hackercamp.cz] fit-content for mozilla

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -97,6 +97,7 @@
       }
       hgroup {
         text-align: center;
+        width: -moz-fit-content;
         width: fit-content;
       }
       hgroup h2 {
@@ -111,6 +112,7 @@
         background-image: var(--hc-gradient);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        width: -moz-fit-content;
         width: fit-content;
       }
 
