[www.hackercamp.cz] CTA wording

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -219,7 +219,7 @@
           večerní&nbsp;zábava
         </li>
       </ul>
-      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform" class="hc-cta">Chci se zúčastnit</a></p>
+      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform" class="hc-cta">Chci se zapojit</a></p>
     </section>
     <section id="popis">
       <p property="description">
