--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Hacker Camp</title>
     <link rel="preconnect" href="https://use.typekit.net" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="preconnect" href="https://www.google-analytics.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -30,6 +31,18 @@
         font-weight: 400;
       }
 
+      /* latin-ext */
+      @font-face {
+        font-family: "PT Mono";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/ptmono/v8/9oRONYoBnWILk-9AnCEzM_HxEcn7Hg.woff2)
+          format("woff2");
+        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+          U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+      }
+
       @font-face {
         font-family: "pt-mono";
         src: url("https://use.typekit.net/af/275cbc/00000000000000007735a125/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
@@ -45,7 +58,7 @@
     </style>
     <style>
       :root {
-        --hc-font-family: pt-mono, monospace;
+        --hc-font-family: pt-mono, PT Mono, monospace;
         --hc-background: #fff;
         --hc-text-color: #585a5c;
         --hc-heading-color: #000;
