--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -18,17 +18,17 @@
       content="Zažijte nultý ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
     />
     <style>
+      /* latin */
       @font-face {
-        font-family: "pt-mono";
-        src: url("https://use.typekit.net/af/7d382a/00000000000000007735a11b/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
-            format("woff2"),
-          url("https://use.typekit.net/af/7d382a/00000000000000007735a11b/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
-            format("woff"),
-          url("https://use.typekit.net/af/7d382a/00000000000000007735a11b/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3")
-            format("opentype");
-        font-display: swap;
+        font-family: "PT Mono";
         font-style: normal;
         font-weight: 400;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/ptmono/v8/9oRONYoBnWILk-9AnC8zM_HxEck.woff2)
+          format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
+          U+2212, U+2215, U+FEFF, U+FFFD;
       }
 
       /* latin-ext */
@@ -58,7 +58,7 @@
     </style>
     <style>
       :root {
-        --hc-font-family: pt-mono, PT Mono, monospace;
+        --hc-font-family: PT Mono, monospace;
         --hc-background: #fff;
         --hc-text-color: #585a5c;
         --hc-heading-color: #000;
@@ -136,6 +136,7 @@
 
       h1,
       h2 {
+        font-family: pt-mono, PT Mono, monospace;
         font-weight: bold;
         color: var(--hc-heading-color);
       }
