--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Hacker Camp</title>
-    <link rel="preconnect" href="https://use.typekit.net" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="preconnect" href="https://www.google-analytics.com" />
@@ -17,48 +16,10 @@
       name="description"
       content="Zažijte nultý ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
     />
-    <style>
-      /* latin */
-      @font-face {
-        font-family: "PT Mono";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url(https://fonts.gstatic.com/s/ptmono/v8/9oRONYoBnWILk-9AnC8zM_HxEck.woff2)
-          format("woff2");
-        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
-          U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
-          U+2212, U+2215, U+FEFF, U+FFFD;
-      }
-
-      /* latin-ext */
-      @font-face {
-        font-family: "PT Mono";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url(https://fonts.gstatic.com/s/ptmono/v8/9oRONYoBnWILk-9AnCEzM_HxEcn7Hg.woff2)
-          format("woff2");
-        unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-          U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-      }
-
-      @font-face {
-        font-family: "pt-mono";
-        src: url("https://use.typekit.net/af/275cbc/00000000000000007735a125/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
-            format("woff2"),
-          url("https://use.typekit.net/af/275cbc/00000000000000007735a125/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
-            format("woff"),
-          url("https://use.typekit.net/af/275cbc/00000000000000007735a125/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3")
-            format("opentype");
-        font-display: swap;
-        font-style: normal;
-        font-weight: 700;
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&amp;display=swap" rel="stylesheet">
     <style>
       :root {
-        --hc-font-family: PT Mono, monospace;
+        --hc-font-family: Source Code Pro, monospace;
         --hc-background: #fff;
         --hc-text-color: #585a5c;
         --hc-heading-color: #000;
@@ -146,7 +107,6 @@
 
       h1,
       h2 {
-        font-family: pt-mono, PT Mono, monospace;
         font-weight: bold;
         color: var(--hc-heading-color);
       }
