--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Hacker Camp</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="preconnect" href="https://www.google-analytics.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -16,7 +15,27 @@
       name="description"
       content="Zažijte nultý ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
     />
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&amp;display=swap" rel="stylesheet">
+    <style>
+      @font-face {
+        font-family: "PT Mono";
+        src: local("PT Mono"),
+          url("/assets/css/PT-Mono_Regular.woff2") format("woff2"),
+          url("/assets/css/PT-Mono_Regular.woff") format("woff"),
+          url("/assets/css/PT-Mono_Regular.tff") format("tff");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "PT Mono";
+        src: local("PT Mono Bold"),
+          url("/assets/css/PT-Mono_Bold.woff2") format("woff2"),
+          url("/assets/css/PT-Mono_Bold.woff") format("woff"),
+          url("/assets/css/PT-Mono_Bold.tff") format("tff");
+        font-weight: 700;
+      }
+    </style>
     <style>
       :root {
         --hc-font-family: Source Code Pro, monospace;
