--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -16,6 +16,7 @@
       content="Zažijte nultý ročník netradičního třídenního festivalu pro lidi z české tech scény. V duchu nekonference či barcampu se od sebe budeme vzájemně učit, bavit se a poznávat."
     />
     <style>
+      /* Font PT Mono: Copyright © ParaType, 2018. All rights reserved.*/
       @font-face {
         font-family: "PT Mono";
         src: local("PT Mono"),
@@ -34,11 +35,13 @@
           url("/assets/css/PT-Mono_Bold.woff") format("woff"),
           url("/assets/css/PT-Mono_Bold.tff") format("tff");
         font-weight: 700;
+        font-style: normal;
+        font-display: swap;
       }
     </style>
     <style>
       :root {
-        --hc-font-family: Source Code Pro, monospace;
+        --hc-font-family: PT Mono, monospace;
         --hc-background: #fff;
         --hc-text-color: #585a5c;
         --hc-heading-color: #000;
@@ -102,7 +105,8 @@
         font-style: normal;
       }
 
-      p, ul {
+      p,
+      ul {
         max-width: 60em;
         margin-left: auto;
         margin-right: auto;
@@ -140,7 +144,8 @@
       hgroup small {
         text-transform: capitalize;
       }
-      h2, strong em {
+      h2,
+      strong em {
         color: #fff;
         background-image: var(--hc-gradient);
         -webkit-background-clip: text;
