--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -227,6 +227,7 @@
     </style>
     <link rel="stylesheet" href="/assets/css/main.css" />
     <link rel="canonical" href="https://www.hackercamp.cz/" />
+    <link rel="author" href="/humans.txt" type="text/plain" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
