[www.hackercamp.cz] Decoration masturbation

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -119,9 +119,6 @@
         margin: 0 auto;
         max-width: var(--hc-layout-width);
       }
-      section {
-        margin-top: 3em;
-      }
       footer::before {
         content: "";
         display: block;
@@ -155,8 +152,7 @@
         width: fit-content;
       }
       section h2 {
-        margin-left: auto;
-        margin-right: auto;
+        margin: 3em auto 2em;
       }
 
       .hc-navbar {
@@ -337,7 +333,7 @@
       <h2 id="toc-co-cekat">Co čekat?</h2>
       <div class="mdc-layout-grid__inner">
         <article
-          class="hc-card hc-card--centered mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
+          class="hc-card hc-card--centered hc-card--superdecorated mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
         >
           <p>
             <strong
