[www.hackercamp.cz] WIP

--- a/www.hackercamp.cz/src/html/index.html
+++ b/www.hackercamp.cz/src/html/index.html
@@ -286,6 +286,7 @@
               Zažijte nultý ročník netradičního třídenního festivalu pro lidi
               z&nbsp;české tech scény.
             </p>
+            <p>2. &ndash; 5. září 2021 na Sobeňáku</p>
             <p>
               <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
@@ -677,18 +678,17 @@
     </section>
 
     <section class="mdc-layout-grid">
-      <h2>Chceš přijet?</h2>
-      <p>
+      <p style="text-align: center">
         <a
           href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
-          >Vyplň nám dotazníček</a
-        >, ideálně rovnou s nápadem, jak bys Hacker Camp obohatil(a) a my se ti
-        pak ozveme. Těšíme se!
+          class="hc-cta"
+          >Zažij s námi nultý ročník Hacker Campu</a
+        >
       </p>
     </section>
 
     <footer class="mdc-layout-grid">
-      <p>© 2021 Hacker Camp</p>
+      <p style="text-align: center">© 2021 Hacker Camp</p>
     </footer>
 
     <script type="module">
